--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://grandonbarcia.github.io/covid-map-frontend",
+  "homepage": "http://grandonbarcia.github.io/covid-tracker",
   "name": "covid19",
   "version": "0.1.0",
   "private": true,
